--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -513,7 +513,7 @@
   box-shadow: $box-shadow;
 
   .nav__title {
-    color: #000;
+    color: #fff;
     font-size: $type-size-6;
     background: $toc-color;
     border-top-left-radius: $border-radius;
