--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -173,4 +173,4 @@ $global-transition: all 0.2s ease-in-out !default;
 $intro-transition: intro 0.3s both !default;
 
 
-$toc-color: #61cd94 !default;
+$toc-color: #103173 !default;
